using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class GamepadInput : MonoBehaviour
{

    // Start is called before the first frame update
    void Start()
    {
        
    }

    // Update is called once per frame
    void Update()
    {
        
    }

    private void LeftStickX()
    {

    }

    private void LeftStickY()
    {

    }

    private void LeftStickPress()
    {

    }

    private void RightStickX()
    {

    }

    private void RightStickY()
    {

    }

    private void RightStickPress()
    {

    }

    private void NorthButton()
    {

    }

    private void EastButton()
    {

    }

    private void SouthButton()
    {

    }

    private void WestButton()
    {

    }

    private void LeftBumper()
    {

    }

    private void RightBumper()
    {

    }

    private void LeftTrigger()
    {

    }

    private void RightTrigger()
    {

    }

    private void SelectButton()
    {

    }

    private void StartButton()
    {

    }
}
